Added links to footer

--- a/actives.html
+++ b/actives.html
@@ -15,7 +15,7 @@
   
     <nav>
         <div class="nav-wrapper">
-          <b id="logo">My Geeky Log</b>
+          <b id="logo">GeekyLog</b>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
           </ul>
         </div>
@@ -42,15 +42,15 @@
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
-                    <h5 class="white-text">My Geeky Log</h5>
+                    <h5 class="white-text">GeekyLog</h5>
                     <p class="grey-text text-lighten-4">Data Mining : Linux commands</br>Data visualization : d3js + materializecss<br>All data is available in CSV</p>
                 </div>
                 <div class="col l4 offset-l2 s12">
                     <h5 class="white-text">Links</h5>
                     <ul>
-                        <li><a class="grey-text text-lighten-3" href="#!">Github</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">@tiropcom</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">http://www.tirop.com/</a></li>
+                        <li><a class="grey-text text-lighten-3" href="https://github.com/VictorVila/GeekyLog">Github</a></li>
+                        <li><a class="grey-text text-lighten-3" href="https://twitter.com/tiropcom">@tiropcom</a></li>
+                        <li><a class="grey-text text-lighten-3" href="http://www.tirop.com/">http://www.tirop.com/</a></li>
                     </ul>
               </div>
             </div>
@@ -58,7 +58,7 @@
           <div class="footer-copyright">
             <div class="container">
                 Free Open source 
-                <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+                <a class="grey-text text-lighten-4 right" href="https://github.com/VictorVila/GeekyLog/blob/master/LICENSE">GNU GPL v3.0</a>
             </div>
         </div>
     </footer>
