--- a/actives.html
+++ b/actives.html
@@ -48,8 +48,8 @@
                 <div class="col l4 offset-l2 s12">
                     <h5 class="white-text">Links</h5>
                     <ul>
-                        <li><a class="grey-text text-lighten-3" href="https://github.com/VictorVila/GeekyLog">Github</a></li>
-                        <li><a class="grey-text text-lighten-3" href="https://twitter.com/tiropcom">@tiropcom</a></li>
+                        <li><a class="grey-text text-lighten-3" href="https://github.com/VictorVila/GeekyLog">Get the source code on Github</a></li>
+                        <li><a class="grey-text text-lighten-3" href="https://twitter.com/tiropcom">Follow me on Twitter : @tiropcom</a></li>
                         <li><a class="grey-text text-lighten-3" href="http://www.tirop.com/">http://www.tirop.com/</a></li>
                     </ul>
               </div>
@@ -77,8 +77,8 @@
         createPieData( 'ratio' , d );  
     });
     
-    createTable( "actives", "urls-actives.csv", "URL", 20 );
-    createTable( "unuseful", "urls-unuseful.csv", "URL", 20 );
+    createTableTSV( "actives", "urls-actives.tsv", "URL", 20 );
+    createTableTSV( "unuseful", "urls-unuseful.tsv", "URL", 20 );
     </script>
 </body>
 </html>
