--- a/broken.html
+++ b/broken.html
@@ -44,8 +44,8 @@
                 <div class="col l4 offset-l2 s12">
                     <h5 class="white-text">Links</h5>
                     <ul>                      
-                        <li><a class="grey-text text-lighten-3" href="https://github.com/VictorVila/GeekyLog">Github</a></li>
-                        <li><a class="grey-text text-lighten-3" href="https://twitter.com/tiropcom">@tiropcom</a></li>
+                        <li><a class="grey-text text-lighten-3" href="https://github.com/VictorVila/GeekyLog">Get the source code on Github</a></li>
+                        <li><a class="grey-text text-lighten-3" href="https://twitter.com/tiropcom">Follow me on Twitter : @tiropcom</a></li>
                         <li><a class="grey-text text-lighten-3" href="http://www.tirop.com/">http://www.tirop.com/</a></li>
                     </ul>
               </div>
@@ -61,8 +61,8 @@
     <script src="js/d3.v4.min.js"></script>
     <script src="js/geeky-log.js"></script>
     <script> 
-    createStack( "statusStack", "status-404-by-date.csv" );
-    createTable2( "broken-links", "broken-links.csv", "From", "To", 50 );
+    createStack( "statusStack", "status-404-by-date.tsv" );
+    createTable2( "broken-links", "broken-links.tsv", "From", "To", 50 );
     </script>
 </body>
 </html>
