Modified footer & stats

--- a/broken.html
+++ b/broken.html
@@ -7,7 +7,7 @@
     <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
     <meta http-equiv="pragma" content="no-cache" />
     <meta charset='utf8'>
-    <title>SeoLog</title>
+    <title>GeekyLog - Broken links</title>
     <link rel="stylesheet" href="css/materialize.min.css"> 
     <link rel="stylesheet" href="css/geeky-log.css"> 
 </head>
@@ -15,7 +15,7 @@
   
     <nav>
         <div class="nav-wrapper">
-          <b id="logo">GeekyLog</b>
+          <a id="logo" href="index.html">GeekyLog</a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
           </ul>
         </div>
