--- a/bots.html
+++ b/bots.html
@@ -7,7 +7,7 @@
     <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
     <meta http-equiv="pragma" content="no-cache" />
     <meta charset='utf8'>
-    <title>SeoLog</title>
+    <title>GeekyLog - Bots, crawlers & spiders</title>
     <link rel="stylesheet" href="css/materialize.min.css"> 
     <link rel="stylesheet" href="css/geeky-log.css"> 
 </head>
@@ -15,7 +15,7 @@
   
     <nav>
         <div class="nav-wrapper">
-          <b id="logo">GeekyLog</b>
+          <a id="logo" href="index.html">GeekyLog</a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
           </ul>
         </div>
@@ -54,7 +54,7 @@
             <div class="row">
                 <div class="col l6 s12">
                     <h5 class="white-text">GeekyLog</h5>
-                    <p class="grey-text text-lighten-4">Data Mining : Linux commands</br>Data visualization : d3js + materializecss<br>All data is available in CSV</p>
+                    <p class="grey-text text-lighten-4">Data Mining : Linux commands</br>Data visualization : d3js + materializecss<br>All data is available in TSV</p>
                 </div>
                 <div class="col l4 offset-l2 s12">
                     <h5 class="white-text">Links</h5>
