--- a/status.html
+++ b/status.html
@@ -7,7 +7,7 @@
     <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
     <meta http-equiv="pragma" content="no-cache" />
     <meta charset='utf8'>
-    <title>SeoLog</title>
+    <title>GeekyLog - Status codes</title>
     <link rel="stylesheet" href="css/materialize.min.css">  
     <link rel="stylesheet" href="css/geeky-log.css">
 </head>
@@ -15,13 +15,14 @@
   
     <nav>
         <div class="nav-wrapper">
-          <b id="logo">GeekyLog</b>
+          <a id="logo" href="index.html">GeekyLog</a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
           </ul>
         </div>
     </nav> 
     
-    <h2>Status codes</h2>
+    <h1>Status codes</h1>
+    <p>Status codes received by googlebot 'search' user agents.</p>
     <div class='table'>
         <h3>Status timeline</h3>
         <svg id="statusStack" width="1200" height="500"></svg> 
@@ -70,7 +71,7 @@
             <div class="row">
                 <div class="col l6 s12">
                     <h5 class="white-text">GeekyLog</h5>
-                    <p class="grey-text text-lighten-4">Data Mining : Linux commands</br>Data visualization : d3js + materializecss<br>All data is available in CSV</p>
+                    <p class="grey-text text-lighten-4">Data Mining : Linux commands</br>Data visualization : d3js + materializecss<br>All data is available in TSV</p>
                 </div>
                 <div class="col l4 offset-l2 s12">
                     <h5 class="white-text">Links</h5>
